add plist, update lib,

--- a/IPALibrary/IPALibrary.csproj
+++ b/IPALibrary/IPALibrary.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,6 +9,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IPALibrary</RootNamespace>
     <AssemblyName>IPALibrary</AssemblyName>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,6 +25,7 @@
     <DefineConstants>TRACE;DEBUG;MAX_PLIST_COMPATIBILITY;MAX_CMS_COMPATIBILITY</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -26,12 +34,16 @@
     <DefineConstants>TRACE;MAX_PLIST_COMPATIBILITY;MAX_CMS_COMPATIBILITY</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BouncyCastle, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL" />
-    <Reference Include="ICSharpCode.SharpZipLib, Version=1.0.0.5, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL" />
-    <Reference Include="PListNet, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="BouncyCastle, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>Components\BouncyCastle.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Components\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -108,11 +120,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Components\BouncyCastle.dll" />
-    <Content Include="Components\ICSharpCode.SharpZipLib.dll" />
     <Content Include="Components\PListNet.dll" />
     <Content Include="Components\System.Core.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PListNet\PListNet.csproj">
+      <Project>{d5f4e38b-0849-4ebb-881c-740d6256cdc0}</Project>
+      <Name>PListNet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.csproj">
       <Project>{D89261E5-9611-4A9E-8F23-31AE0BD196AC}</Project>
       <Name>Utilities</Name>
